# demo-rust-lambda-appsync

./: .gitignore  Cargo.toml  README.md  ci-template.yml  demo-root-template.yml  flake.nix  idea.txt
ci-config/: buildspec.yml
graphql/: schema.gql
graphql/js/: get_game_status.req.js  get_player.req.js  update_click.req.js  update_latency.req.js
graphql/vtl/: get_game_status.req.vtl  get_player.req.vtl  update_click.req.vtl  update_latency.req.vtl
python/lambdas/appsync-bench-source/: index.py
python/lambdas/cleanup-s3/: index.py
rust/lambdas/appsync-bench-source/: Cargo.toml
rust/lambdas/appsync-bench-source/src/: dynamodb_helpers.rs  main.rs  operations.rs
rust/lambdas/appsync-source/: Cargo.toml
rust/lambdas/appsync-source/src/: appsync_utils.rs  dynamodb_helpers.rs  dynamodb_utils.rs  game.rs  main.rs  operations.rs
rust/lambdas/appsync-source/src/dynamodb_utils/: generic.rs  mod.rs
rust/libs/appsync_utils/: Cargo.toml
rust/libs/appsync_utils/src/: lib.rs
rust/libs/dynamodb_utils/: Cargo.toml
rust/libs/dynamodb_utils/src/: lib.rs
rust/libs/lambda-appsync/: Cargo.toml
rust/libs/lambda-appsync-proc/: Cargo.toml
rust/libs/lambda-appsync-proc/src/: lib.rs
rust/libs/lambda-appsync-proc/src/appsync_lambda_main/: graphql.rs  mod.rs
rust/libs/lambda-appsync-proc/src/appsync_operation/: mod.rs
rust/libs/lambda-appsync/src/: id.rs  lib.rs
rust/libs/lambda-appsync/src/aws_scalars/: datetime.rs  email.rs  mod.rs
rust/libs/lambda_commons_utils/: Cargo.toml
rust/libs/lambda_commons_utils/src/: lib.rs
rust/libs/shared_types/: Cargo.toml
rust/libs/shared_types/src/: common.rs  dynamodb.rs  game.rs  lib.rs
templates/: cognito.yml  graphqlapi.yml  static-website.yml
utils/: simulate_players.py
utils/simulate_players/: Cargo.toml
utils/simulate_players/src/: main.rs
website/: .gitignore  buildspec.yml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
website/src/: App.vue  main.js
website/src/assets/: main.css
website/src/components/: AlertDisplay.vue  CChangeName.vue  CModal.vue  CRegistration.vue  DisplayLatency.vue  DisplayPlayerClicks.vue  DisplayPlayerCount.vue  DisplayPlayerRank.vue  DisplayRank.vue  EditableText.vue  InfoTip.vue  LayoutLink.vue  LayoutLinks.vue  PlayerScore.vue  SimpleInput.vue  TeamIcon.vue  TeamScore copy.vue  TeamScore.vue  ThemeSwitch.vue
website/src/layouts/: MainLayout.vue  NavigationLayout.vue
website/src/modules/: utils.js
website/src/plugins/: amplify.js  index.js
website/src/router/: index.js
website/src/views/: AdminView.vue  GameView.vue  LeaderBoard.vue  MainView.vue
