[package]
name = "simulate_players"
version = "0.1.0"
rust-version = "1.85.0"
edition = "2024"
authors = ["Jérémie RODON <jeremie.rodon@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
env_logger = "0.11"
uuid = { version = "1.11", features = ["v4"] }
