[package]
name = "appsync-bench-source"
version = "0.1.0"
edition = "2021"


[dependencies]
lambda_commons_utils = { path = "../../libs/lambda_commons_utils" }
dynamodb_utils = { path = "../../libs/dynamodb_utils" }
appsync_utils = { path = "../../libs/appsync_utils" }
aws-sdk-dynamodb = { workspace = true }

serde = { workspace = true }
serde_dynamo = { workspace = true }

thiserror = { workspace = true }
