[package]
name = "appsync_utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true}

log = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
