[package]
name = "lambda-appsync"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda-appsync-proc = { path = "../lambda-appsync-proc" }

tokio = { workspace = true}

lambda_runtime = { workspace = true}
aws-config = { workspace = true}

log = { workspace = true }
env_logger = { workspace = true }

thiserror = { workspace = true }
uuid = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
